--- a/translations/KC3-zh-TW.json
+++ b/translations/KC3-zh-TW.json
@@ -235,7 +235,7 @@
     },
     "156": {
         "name": "編成「第一水雷戦隊」!",
-        "desc": "於主艦隊編成「阿武隈」、「響/Верный」、「初霜」、「若業」、「五月雨」及「島風」。",
+        "desc": "於主艦隊編成「阿武隈」、「響/Верный」、「初霜」、「若葉」、「五月雨」及「島風」。",
 	"memo": "※旗艦: 阿武隈。"
     },
     "157": {
@@ -515,7 +515,7 @@
     },
     "260": {
         "name": "戰艦部隊，突入北方海域！",
-        "desc": "在 3-5 出動「戰艦部隊」來擊敗敵軍主力艦隊 2 次！\n※「戰艦部隊」：有 2 艘戰艦、1 艘輕巡洋艦及額外 3 艘艦的艦隊。",
+        "desc": "在 3-5 出動「戰艦部隊」來擊敗敵軍主力艦隊 2 次！\n※「戰艦部隊」：有 2 艘戰艦、1 艘輕型航空母艦及額外 3 艘艦的艦隊。",
 	"memo": "※只限 S 勝。\n※航空戰艦也結算在內。\n※獎勵：一式穿甲彈及2x開發資材。"
     },
     "262": {
@@ -1154,12 +1154,12 @@
     "316": {
         "name": "強化輸送部隊的練度！",
         "desc": "在同一天內與其他提督的艦隊進行 4 次演習且獲勝！",
-        "memo": "※獎勵：2x改修資材，以及下列二選一：\nA.大發動艇 或 B.特注家具職人。"
+        "memo": "※獎勵：2x改修資材，以及下列二選一：\nA.大發動艇 或 B.特注家具職人"
     },
     "317": {
         "name": "甲型驅逐艦 戰力整備計畫",
         "desc": "先在演習出動「甲型驅逐艦部隊」來戰勝其他提督的艦隊 3 次，然後在 2-2、2-3、2-4 及 2-5 出動「甲型驅逐艦部隊」來擊敗敵軍主力艦隊！\n※「甲型驅逐艦部隊」：有最少 2 艘陽炎型或夕雲型驅逐艦的艦隊。",
-        "memo": "※只限 A 勝以上。\n※獎勵：下列 2 個二選一：\n01: A.戰鬥詳報 或 B.特注家具職人\n02: C.5x高速修復材 或 D.2x戰鬥糧食。"
+        "memo": "※只限 A 勝以上。\n※獎勵：下列 2 個二選一：\n01: A.戰鬥詳報 或 B.特注家具職人\n02: C.5x高速修復材 或 D.2x戰鬥糧食"
     },
     "318": {
         "name": "(月) 支援給糧艦「伊良湖」！",
@@ -1170,6 +1170,21 @@
         "name": "精鋭「第二一驅逐隊」的魔鬼特訓！",
         "desc": "在同一天內出動「精鋭第二一驅逐隊」與其他提督的艦隊進行 4 次演習且獲勝！\n※「精銳第二十一驅逐隊」：有初春改二、若葉改及初霜改二的艦隊。",
         "memo": "※可以使用額外艦。\n※獎勵：給糧艦「間宮」，以及下列二選一：\nA.6x開發資材 或 B.戰鬥詳報"
+    },
+    "320": {
+        "name": "驅逐隊，特訓開始！",
+        "desc": "在同一天內出動「驅逐隊」與其他提督的艦隊進行 4 次演習且獲勝！\n※「驅逐隊」：有 4 艘驅逐艦的艦隊。",
+        "memo": "※可以使用額外艦。\n※獎勵：3x高速修復材，以及下列二選一：\nA.2x改修資材 或 B.4x開發資材"
+    },
+    "322": {
+        "name": "海防艦，特訓開始！",
+        "desc": "在同一天內出動「海防艦部隊」與其他提督的艦隊進行 2 次演習且獲勝！\n※「海防艦部隊」：有 1 艘海防艦及 2 艘驅逐艦的艦隊。\n※旗艦必須是海防艦。",
+        "memo": "※可以使用額外艦。\n※獎勵：五周年掛軸(エロ豆腐版)，以及下列二選一：\nA.補強增設 或 B.勳章"
+    },
+    "323": {
+        "name": "最精銳甲型驅逐艦，特訓開始！",
+        "desc": "在同一天內出動「甲型驅逐艦部隊」與其他提督的艦隊進行 4 次演習且獲勝！\n※「甲型驅逐艦部隊」：有 4 艘等級 70 以上的甲型驅逐艦(陽炎型/夕雲型)的艦隊。",
+        "memo": "※可以使用額外艦。\n※獎勵：下列 2 個二選一：\n01: A.4x高速修復材 或 B.4x開發資材\n02. C.勳章 或 D. 戰鬥詳報"
     },
     "401": {
         "name": "初次遠征!",
