--- a/translations/KC3-ja-JP.json
+++ b/translations/KC3-ja-JP.json
@@ -503,6 +503,12 @@
         "desc": "改装甲型駆逐隊編成任務：対空兵装を軸に大幅強化改装した「磯風乙改」「浜風乙改」、そして対潜兵装を強化改装した「浦風丁改」「谷風丁改」による、精鋭「第十七駆逐隊」を編成せよ！",
         "memo": "※任務達成ボイス有\n[獲]給糧艦「伊良湖」x1\n選択報酬：\n　戦闘糧食x2、高速修復材x3"
     },
+    "196": {
+        "code": "A91",
+        "name": "精鋭「第十駆逐隊」、抜錨準備！",
+        "desc": "甲型駆逐艦編成任務：夕雲型駆逐艦「夕雲改二」及び「巻雲改二」の2隻から成る精鋭第十駆逐隊(2隻編成)を編成せよ！",
+        "memo": "※夕雲改二・巻雲改二のみの艦隊を編成すると達成。他の艦が1隻でもあるとクリアにならないので注意\n[獲]戦闘糧食x1\n選択報酬：\n　高速修復材x5、特注家具職人x1"
+    },
 
 
 
@@ -848,7 +854,13 @@
         "code": "B124",
         "name": "「第七駆逐隊」、南西諸島を駆ける！",
         "desc": "「曙」「潮」「漣」「朧」からなる「第七駆逐隊」2隻以上を含む有力な艦隊を編成、南西諸島近海、バシー海峡、東部オリョール海、沖ノ島海域の敵戦力を撃滅、南西諸島海域の制海権を確保せよ！",
-        "memo": "※「曙」「潮」「漣」「朧」の内2隻を含む艦隊で、「敵主力艦隊」(2-1ボス戦)、「敵通商破壊機動部隊 主力艦隊」(2-2ボス戦)、「敵主力打撃群」(2-3ボス戦)、「敵侵攻中核水上打撃部隊」(2-4ボス戦)にS勝利で達成\n※「第七駆逐隊」の2隻+自由枠4\n[獲]二回選択報酬：\n　特注家具職人x1、12.7cm連装砲B型改二x3、大発動艇x1\n　開発資材x8、改修資材x5、零式水中聴音機x1"
+        "memo": "※「敵主力艦隊」(2-1ボス戦)及び「敵通商破壊機動部隊 主力艦隊」(2-2ボス戦)、「敵主力打撃群」(2-3ボス戦)、「敵侵攻中核水上打撃部隊」(2-4ボス戦)にS勝利で達成\n※「曙」「潮」「漣」「朧」の2隻+自由枠4\n[獲]二回選択報酬：\n　特注家具職人x1、12.7cm連装砲B型改二x3、大発動艇x1\n　開発資材x8、改修資材x5、零式水中聴音機x1"
+    },
+    "299": {
+        "code": "B125",
+        "name": "近海の警戒監視と哨戒活動を強化せよ！",
+        "desc": "軽巡旗艦、駆逐艦または海防艦2隻を含む艦隊を編成、南西諸島沖、製油所地帯沿岸、南西諸島防衛線、南西諸島近海、バシー海峡を哨戒、敵艦隊を捕捉撃滅、近海の制海権を確立せよ！",
+        "memo": "※「敵主力艦隊」(1-2ボス戦)及び「敵主力艦隊」(1-3ボス戦)、「敵機動部隊」(1-4ボス戦)、「敵主力艦隊」(2-1ボス戦)、「敵通商破壊機動部隊 主力艦隊」(2-2ボス戦)に各1回ずつS勝利で達成\n※軽巡旗艦+駆逐艦または海防艦2+自由枠3\n[獲]二回選択報酬：\n　補強増設x1、勲章x1\n　新型砲熕兵装資材x2、探照灯x2、戦闘詳報x1"
     },
     "805": {
         "code": "B58",
@@ -998,7 +1010,7 @@
         "code": "B82",
         "name": "夜の海を照らす「灯り」を入手せよ！",
         "desc": "有力な艦隊をカムラン半島に投入、同方面に出没する敵艦隊を補足、これを撃滅せよ！\nそして夜を照らす「灯り」を入手せよ！　ある季節は夜戦以外にも使い道があるようだ！",
-        "memo": "※「敵主力艦隊」(2-1ボス戦)にS勝利以上で達成\n[獲]探照灯x1"
+        "memo": "※「敵主力艦隊」(2-1ボス戦)にS勝利で達成\n[獲]探照灯x1"
     },
     "834": {
         "code": "B83",
@@ -1244,7 +1256,19 @@
         "code": "B123",
         "name": "精強「十七駆」、北へ、南へ！",
         "desc": "改装甲型駆逐艦「磯風乙改」「浜風乙改」「浦風丁改」「谷風丁改」4隻の精強「十七駆」を含む艦隊で鎮守府近海、キス島沖、ブルネイ泊地沖、南方海域前面に出撃、敵戦力と交戦、これを撃破せよ！",
-        "memo": "※「磯風乙改」+「浜風乙改」+「浦風丁改」+「谷風丁改」+自由枠2の編成で「敵通商破壊主力艦隊」(1-5ボス戦)、「敵キス島包囲艦隊」(3-2ボス戦)、「深海潜水艦隊集団　旗艦戦隊」(7-1ボス戦)、「敵南方前線司令艦隊」(5-1ボス戦)を各1回ずつA?勝利で達成\n※磯風乙改+浜風乙改+浦風丁改+自由枠2\n[獲]二回選択報酬：\n　三式水中探信儀x1、12.7cm単装高角砲(後期型)x1、特注家具職人x1\n　戦闘詳報x1、12.7cm連装砲C型改二x1、61cm四連装(酸素)魚雷後期型x1"
+        "memo": "※「敵通商破壊主力艦隊」(1-5ボス戦)、「敵キス島包囲艦隊」(3-2ボス戦)、「深海潜水艦隊集団　旗艦戦隊」(7-1ボス戦)、「敵南方前線司令艦隊」(5-1ボス戦)を各1回ずつA勝利以上で達成\n※「磯風乙改」+「浜風乙改」+「浦風丁改」+「谷風丁改」+自由枠2\n[獲]二回選択報酬：\n　三式水中探信儀x1、12.7cm単装高角砲(後期型)x1、特注家具職人x1\n　戦闘詳報x1、12.7cm連装砲C型改二x1、61cm四連装(酸素)魚雷後期型x1"
+    },
+    "892": {
+        "code": "B126",
+        "name": "主力オブ主力、抜錨開始！",
+        "desc": "甲型駆逐艦編成任務:夕雲型駆逐艦「夕雲改二」及び「巻雲改二」の2隻から成る精鋭第十駆逐隊を含む有力な艦隊を南方海域に投入、サブ島沖海域、サーモン海域、サーモン海域北方の敵を捕捉撃滅せよ！",
+        "memo": "※「敵南方艦隊 旗艦」(5-3ボス戦)、「敵南方増援部隊 本隊」(5-4ボス戦)、「深海南方任務部隊 本隊」(5-5ボス戦)を各1回ずつS勝利で達成\n※「夕雲改二」+「巻雲改二」+自由枠4\n[獲]二回選択報酬：\n　新型砲熕兵装資材x1、新型航空兵装資材x1、大発動艇x1\n　熟練搭乗員x1、改修資材x4"
+    },
+    "895": {
+        "code": "B127",
+        "name": "冬季北方海域作戦",
+        "desc": "冬季北方作戦：軽巡級を旗艦とする有力な艦隊で、モーレイ海、アルフォンシーノ方面、北方海域全域及び北方AL海域に反復出撃！同海域に遊弋する敵艦隊を捕捉、これを撃滅し、北方海域制海権を確保せよ！",
+        "memo": "※「敵北方侵攻艦隊」(3-1ボス戦)、「敵深海北方泊地艦隊」(3-3ボス戦)、「深海棲艦 北方艦隊中枢」(3-4ボス戦)、「北方増援部隊主力」(3-5ボス戦)を各2回ずつS勝利で達成\n※軽巡級旗艦+自由枠5\n[獲]二回選択報酬：\n　零式艦戦21型x3、零式艦戦32型x2、特注家具職人x1\n　改修資材x4、22号対水上電探x3、新型航空兵装資材x2"
     },
 
 
@@ -1449,8 +1473,22 @@
         "code": "Bq7",
         "name": "新編成「三川艦隊」、鉄底海峡に突入せよ！",
         "desc": "鉄底海峡戦果拡張：「鳥海」「青葉」「衣笠」「加古」「古鷹」「天龍」「夕張」の中から4隻を含む突入艦隊を編成。南方海域前面及びサブ島沖海域、サーモン海域に突入、敵艦隊を撃滅せよ！",
-        "memo": "※クォータリー\n※「南方海域前面」(5-1ボス)及び「サブ島沖海域」(5-3ボス)、「サーモン海域」(5-4ボス)を各1回ずつS勝利で達成\n※「鳥海」「青葉」「衣笠」「加古」「古鷹」「天龍」「夕張」の中から4隻+自由枠2\n[獲]戦果+200\n選択報酬：\n　勲章x1、改修資材x5",
+        "memo": "※クォータリー\n※「南方海域前面」(5-1ボス戦)及び「サブ島沖海域」(5-3ボス戦)、「サーモン海域」(5-4ボス戦)を各1回ずつS勝利で達成\n※「鳥海」「青葉」「衣笠」「加古」「古鷹」「天龍」「夕張」の中から4隻+自由枠2\n[獲]戦果+200\n選択報酬：\n　勲章x1、改修資材x5",
         "trackingDesc": [ "{0}　5-1ボスS勝利", "{0}　5-3ボスS勝利", "{0}　5-4ボスS勝利" ]
+    },
+    "893": {
+        "code": "Bq8",
+        "name": "泊地周辺海域の安全確保を徹底せよ！",
+        "desc": "泊地近海警戒戦果拡張：有力な泊地哨戒部隊を編成、鎮守府近海、ブルネイ泊地沖、タウイタウイ泊地沖に反復出撃！各周辺海域に手出没する敵船を制圧、さらに泊地周辺の脅威となる敵戦力を捕捉撃滅せよ！",
+        "memo": "※クォータリー\n※「敵通商破壊主力潜水艦隊」(1-5ボス戦)及び「深海潜水艦隊集団　旗艦戦隊」(7-1ボス戦)、「セレベス海方面 旗艦哨戒潜水艦」(7-2-Gボス戦)、「深海任務部隊 主力機動部隊群」(7-2-Mボス戦)を各3回ずつS勝利で達成\n※ボスマス4箇所のうち2箇所で3回ずつS勝利することで50％が表示、もう1箇所で3回S勝利すると80％が表示される\n[獲]戦果+300\n選択報酬：\n　熟練見張員x1、熟練搭乗員x1、洋上補給x4",
+        "trackingDesc": [ "{0}　1-5ボスS勝利", "{0}　7-1ボスS勝利", "{0}　7-2-GボスS勝利", "{0}　7-2-MボスS勝利" ]
+    },
+    "894": {
+        "code": "Bq9",
+        "name": "空母戦力の投入による兵站線戦闘哨戒",
+        "desc": "空母を含む有力な哨戒艦隊を編成、製油所地帯沿岸、南西諸島防衛線、南西諸島近海、バシー海峡及び東部オリョール海を戦闘哨戒、各海域の敵艦隊を捕捉撃滅、各海域兵站線の安全を確保せよ！",
+        "memo": "※クォータリー\n※「敵主力艦隊」(1-3ボス戦)、「敵機動部隊」(1-4ボス戦)、「敵主力艦隊」(2-1ボス戦)、「敵通商破壊機動部隊 主力艦隊」(2-2ボス戦)、「敵主力打撃群」(2-3ボス戦)を各1回ずつS勝利で達成\n※空母1以上+残り自由枠\n[獲]二回選択報酬：\n　新型航空兵装資材x1、開発資材x4\n　彩雲x1、熟練搭乗員x1、プレゼント箱x1",
+        "trackingDesc": [ "{0}　1-3ボスS勝利", "{0}　1-4ボスS勝利", "{0}　2-1ボスS勝利", "{0}　2-2ボスS勝利", "{0}　2-3ボスS勝利" ]
     },
 
 
@@ -1515,7 +1553,7 @@
     "314": {
         "code": "C14",
         "name": "冬季大演習",
-        "desc": "冬の一日中に「演習」で8回以上「勝利」をおさめ、艦隊のさらなる練度に努めよ！",
+        "desc": "冬季大演習：冬の一日中に「演習」で8回以上「勝利」をおさめ、艦隊のさらなる練度に努めよ！",
         "memo": "※季節限定\n※2016「冬季大演習(C11)」と説明文、報酬などが全く同一の復刻である\n[獲]給糧艦「間宮」x1"
     },
     "315": {
@@ -2273,6 +2311,18 @@
         "memo": "※クォータリー\n[獲]選択報酬：\n　零式艦戦32型(熟練)x1、一式戦 隼II型x1、瑞雲(六三一空)x1",
         "trackingDesc": [ "{0} 艦戦", "{0} 艦爆", "{0} 艦攻", "{0} 水偵" ]
     },
+    "689": {
+        "code": "F80",
+        "name": "戦闘機隊戦力の拡充",
+        "desc": "戦闘機拡充任務：「艦戦」「水偵」各x4、「艦偵」x2装備を廃棄、熟練搭乗員x1、新型航空兵装資材x1、ボーキサイト3,000を準備せよ！(任務達成後、準備した資源・熟練搭乗員・新型航空兵装資材は消費)",
+        "memo": "[獲]選択報酬：\n　烈風改x1、三式戦 飛燕x2、Spitfire Mk.Ix2"
+    },
+    "690": {
+        "code": "F81",
+        "name": "基地航空隊戦力の拡充",
+        "desc": "基地航空隊拡充任務：「艦戦」「艦爆」「艦攻」各x4装備を廃棄、熟練搭乗員x1、新型航空兵装資材x2、ボーキサイト4,800を準備せよ！(任務達成後、準備した資源・熟練搭乗員・新型航空兵装資材は消費)",
+        "memo": "[獲]選択報酬：\n　雷電x1、試製東海x1、紫電一一型x2"
+    },
 
 
 
@@ -2508,7 +2558,7 @@
         "code": "SB22",
         "name": "春の準備任務：桃の節句準備を完遂せよ！",
         "desc": "春の準備任務：艦隊を東部オリョール海に反復出撃、同方面敵艦隊を覆滅し、同海域周辺の制海権を完全に確保、桃の節句を迎える準備を完遂せよ！",
-        "memo": "※「敵主力打撃群」(2-3ボス戦)に5回S勝利以上で達成\n[獲]補強増設x1\n菱餅x3"
+        "memo": "※「敵主力打撃群」(2-3ボス戦)に5回S勝利で達成\n[獲]補強増設x1\n菱餅x3"
     },
     "831": {
         "code": "SB12",
